Clave para el clima

--- a/ClimaTiempoReal.Api/appsettings.json
+++ b/ClimaTiempoReal.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "OpenWeatherMap": {
+    "ApiKey": "36be44fb38b1e5ab6de112ddbffddb0e"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,3 +10,5 @@
   },
   "AllowedHosts": "*"
 }
+
+
